# blockflow

./: Dockerfile  RAM_Analogy.md  README.md  docker-compose.yml  pyproject.toml
blockflow/: block.py  boundary.py  truncation.py
examples/: context_instruction.py  multiple_docs.py  stats.prof  test_blockflow.py  testllmagic.py
examples/data/: pg2.txt  pg3.txt
llmagic/: block.py  boundary.py  config.py  custom_truncate.py  dtypes.py  errors.py  tokenizer.py  truncation.py
tests/: test_block.py  test_rich_visuals.py
